

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/protocol";
option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package protocol;

service HelloService {

  // 一元调用
  rpc SayHello(HelloRequest) returns (HelloResponse);
  // 服务端流式返回
  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponseStream);
  // 客户端流式
  rpc LotsOfGreetings(stream HelloRequestStream) returns (HelloResponse);
  // 双流式
  rpc BidiHello(stream HelloRequestStream) returns (stream HelloResponseStream);
}

message Msg {
  string TransCode = 1;
  string Data = 2;
  string RespCode = 3;
}

message HelloRequest {
  Msg req = 1;
}

message HelloResponse {
  Msg resp = 1;
}

message HelloResponseStream {
  Msg resp = 1;
}

message HelloRequestStream {
  Msg req = 1;
}